# ms-graph

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: getting_users.py  logger.py  sending_email.py  upload_file_sharepoint.py
ms_graph/: graph_email.py  graph_sharepoint.py
ms_src/: graph_email.py  graph_sharepoint.py  graph_users.py  ms_graph.py
